Fix:  text overflow with ellipses #19

--- a/frontend/src/app/main-header/main-header.component.scss
+++ b/frontend/src/app/main-header/main-header.component.scss
@@ -63,6 +63,7 @@ ion-menu-button {
       max-width: calc(100vw - 370px);
       height: 100% !important;
       text-align: center;
+      word-wrap: break-word;
       height: fit-content;
       p {
         margin: auto 0;
